// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drag and show left part 1`] = `
<div class="ms-swipe-cell">
  <div class="ms-swipe-cell__wrapper" style="transform: translate3d(0px, 0, 0);">
    <div class="ms-swipe-cell__left"></div>
    <div class="ms-swipe-cell__right"></div>
  </div>
</div>
`;

exports[`drag and show left part 2`] = `
<div class="ms-swipe-cell">
  <div class="ms-swipe-cell__wrapper" style="transform: translate3d(100px, 0, 0);">
    <div class="ms-swipe-cell__left"></div>
    <div class="ms-swipe-cell__right"></div>
  </div>
</div>
`;

exports[`drag and show left part 3`] = `
<div class="ms-swipe-cell">
  <div class="ms-swipe-cell__wrapper" style="transform: translate3d(100px, 0, 0);">
    <div class="ms-swipe-cell__left"></div>
    <div class="ms-swipe-cell__right"></div>
  </div>
</div>
`;

exports[`drag and show left part 4`] = `
<div class="ms-swipe-cell">
  <div class="ms-swipe-cell__wrapper" style="transform: translate3d(100px, 0, 0);">
    <div class="ms-swipe-cell__left"></div>
    <div class="ms-swipe-cell__right"></div>
  </div>
</div>
`;

exports[`drag and show left part 5`] = `
<div class="ms-swipe-cell">
  <div class="ms-swipe-cell__wrapper" style="transform: translate3d(-100px, 0, 0);">
    <div class="ms-swipe-cell__left"></div>
    <div class="ms-swipe-cell__right"></div>
  </div>
</div>
`;
